samples/_failures_safe/1761147118_f2f607_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f11e1ce3.c: In function ‘main’:
./samples/SAFE/__tmp_f11e1ce3.c:154:51: error: expected ‘)’ at end of input
  154 |                 add_matrices(&mat1, &mat2, &result
      |                             ~                     ^
      |                                                   )
./samples/SAFE/__tmp_f11e1ce3.c:154:17: error: expected declaration or statement at end of input
  154 |                 add_matrices(&mat1, &mat2, &result
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_f11e1ce3.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f11e1ce3.c:154:17: error: expected declaration or statement at end of input
